# scrng

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
src/scrng/: main.py
src/scrng/testData/: combined.txt  test_1.txt  test_10.txt  test_100.txt  test_11.txt  test_12.txt  test_13.txt  test_14.txt  test_15.txt  test_16.txt  test_17.txt  test_18.txt  test_19.txt  test_2.txt  test_20.txt  test_21.txt  test_22.txt  test_23.txt  test_24.txt  test_25.txt  test_26.txt  test_27.txt  test_28.txt  test_29.txt  test_3.txt  test_30.txt  test_31.txt  test_32.txt  test_33.txt  test_34.txt  test_35.txt  test_36.txt  test_37.txt  test_38.txt  test_39.txt  test_4.txt  test_40.txt  test_41.txt  test_42.txt  test_43.txt  (+61 more)
src/scrng/test_results/sts/: result.txt
