[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "scrng"
version = "0.0.1"
authors = [
  { name="Rohan Date", email="rohan.s.date@icloud.com" },
]
description = "A utility for generating random digits."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",  
]

